--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,29 @@ body{
     padding: 40px;
     border-radius: 30px;
 }
+#log_in{
+    width: 500px;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 40px;
+    border-radius: 30px;
+}
+#log_admin
+{
+    text-align: center;
+    cursor: pointer;
+}
+#admin{
+    color: cornflowerblue;
+}
+#sign{
+    color: #344767;
+    text-decoration: underline;
+}
+#objectif{
+    text-align: center;
+    padding-left: 30px;
+    color: red;
+}
+#goal{
+    background-image: url("../img/how-to-eat-healthy.webp");
+}
